fix(common.scss): make header invisible when mobile
Make the header invisible when the screen is 768px or less.

--- a/common/common.scss
+++ b/common/common.scss
@@ -84,3 +84,9 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .b-header {
+    display: none;
+  }
+}
